--- a/Samples/Sample.Api/appsettings.json
+++ b/Samples/Sample.Api/appsettings.json
@@ -3,6 +3,7 @@
     "LogLevel": {
       "Default": "Trace",
       "Microsoft": "Warning",
+      "MassTransit": "Debug",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
