--- a/Samples/Sample.Components/Sample.Components.csproj
+++ b/Samples/Sample.Components/Sample.Components.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="MassTransit" Version="7.3.1" />
     <PackageReference Include="MassTransit.Analyzers" Version="7.3.1" />
+    <PackageReference Include="MassTransit.Redis" Version="7.3.1" />
   </ItemGroup>
 
   <ItemGroup>
